cluster-gitops/apps/cyberchef/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-svc
  namespace: tools
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: cyberchef
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef-ingress
  namespace: tools
  annotations:
    kubernetes.io/ingress.class: cilium
# Cilium Ingress
spec:
  rules:
    - host: cyberchef.k8s.mxe11.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef-svc
                port:
                  number: 80
